# stock_prediction

./: README.md  ml_steps.md  predict_closing_price.ipynb  pyproject.toml  requirements.txt
art_intelligence/: lstm.ipynb
data/raw/: APLAPOLLO-INTRADAY.csv  DLINKINDIA.csv  HDFCBANK-INTRADAY.csv  JSWSTEEL-INTRADAY.csv  KEC-INTRADAY.csv  MAXHEALTH-INTRADAY.csv  MCX:CRUDEOILM24SEPFUT-INTRADAY.csv  MCX:ZINCMINI24AUGFUT-INTRADAY.csv  NATGASMINIFUT-INTRADAY.csv  NATGASMINIJULFUT-INTRADAY.csv  PRESTIGE-INTRADAY.csv  RAJESHEXPO-INTRADAY.csv  SBIN-INTRADAY.csv  SOL_USDT.csv  SONACOMS-INTRADAY.csv  TATAMOTORS-INTRADAY.csv  TATAMOTORS.csv  ZEEL-INTRADAY.csv
econometric_models/: arima.ipynb  garch.ipynb
quantitative_analysis/: svm.ipynb
